# Alta

./: CMakeLists.txt
include/common/: diagnostic.hpp  operator.hpp  span.hpp
include/lexer/: lexer.hpp  token.hpp
include/parser/: ast.hpp  parser.hpp
src/: CMakeLists.txt  main.cpp
src/common/: diagnostic.cpp  operator.cpp  span.cpp
src/lexer/: lexer.cpp  token.cpp
src/parser/: ast.cpp  parser.cpp
tests/: CMakeLists.txt  tests.cpp
